--- a/lovelace-ui.yaml
+++ b/lovelace-ui.yaml
@@ -25,8 +25,9 @@ resources:
     url: /customcards/github/maykar/compact-custom-header.js?track=true
 title: Home
 views:
-  - badges: []
-    cards:
+  - cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - cards:
           - card:
               entity: person.flat
@@ -284,6 +285,7 @@ views:
           show:
             extrema: false
             labels: true
+            fill: fade
           type: 'custom:mini-graph-card'
         style:
           background: 'right / cover no-repeat url("#/local/assets/")'
@@ -461,6 +463,7 @@ views:
           show:
             extrema: true
             labels: false
+            fill: fade
           type: 'custom:mini-graph-card'
         style:
           background: 'right / cover no-repeat url("#/local/assets/")'
@@ -529,11 +532,29 @@ views:
                 type: 'custom:card-modder'
             type: horizontal-stack
         type: vertical-stack
+    badges: []
     icon: 'mdi:home-assistant'
     path: default_view
     title: Home
-  - badges: []
-    cards:
+    panel: false
+  - cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
+      - card:
+          artwork: cover
+          entity: media_player.kitchen_home
+          hide:
+            power_state: false
+            source: true
+            volume: false
+          type: 'custom:mini-media-player'
+        style:
+          background: 'right / cover no-repeat url("#/local/assets/")'
+          border: 'solid 1px rgba(100,100,100,0.3)'
+          border-radius: 10px
+          box-shadow: '3px 3px rgba(0,0,0,0.4)'
+          overflow: 'hidden#'
+        type: 'custom:card-modder'
       - card:
           artwork: cover
           entity: media_player.googlehome4940
@@ -551,12 +572,17 @@ views:
         type: 'custom:card-modder'
       - card:
           entities:
+            - entity: binary_sensor.hallway_sensor_motion
+              name: Motion sensor
+            - type: divider
             - entity: light.hue_hallway_1
               type: 'custom:slider-entity-row'
+              name: Light 1
             - entity: light.hue_hallway_2
               type: 'custom:slider-entity-row'
+              name: Light 2
           show_header_toggle: true
-          title: Hallway Lights
+          title: Hallway
           type: entities
         style:
           background: 'right / cover no-repeat url("#/local/assets/")'
@@ -564,122 +590,54 @@ views:
           border-radius: 10px
           box-shadow: '3px 3px rgba(0,0,0,0.4)'
           overflow: 'hidden#'
-        type: 'custom:card-modder'
-      - card:
-          entities:
-            - entity: binary_sensor.hallway_sensor_motion
-          show_header_toggle: false
-          type: entities
-        style:
-          background: 'right / cover no-repeat url("#/local/assets/")'
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: 'hidden#'
-        type: 'custom:card-modder'
-      - card:
-          align_state: center
-          animate: false
-          color_thresholds:
-            - color: '#f39c12'
-              value: 16
-            - color: '#d35400'
-              value: 18
-            - color: '#c0392b'
-              value: 20
-            - color: '#C61212'
-              value: 22
-          decimals: 1
-          entities:
-            - sensor.hallway_sensor_temperature
-          show:
-            extrema: true
-            labels: false
-          type: 'custom:mini-graph-card'
-        style:
-          background: 'right / cover no-repeat url("#/local/assets/")'
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: 'hidden#'
-        type: 'custom:card-modder'
-      - card:
-          align_state: center
-          animate: false
-          color_thresholds:
-            - color: '#1F0856'
-              value: 1
-            - color: '#221E8A'
-              value: 10
-            - color: '#A990E3'
-              value: 17
-          entities:
-            - sensor.hallway_sensor_light_level
-          icon: 'mdi:brightness-6'
-          line_color: '#0E0B58'
-          type: 'custom:mini-graph-card'
-        style:
-          background: 'right / cover no-repeat url("#/local/assets/dyson_bg.png")'
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: 'hidden#'
-        type: 'custom:card-modder'
-    icon: 'mdi:door'
-    path: ''
-    theme: default
-    title: Hallway
-  - badges: []
-    cards:
-      - card:
-          artwork: cover
-          entity: media_player.kitchen_home
-          hide:
-            power_state: false
-            source: true
-            volume: false
-          type: 'custom:mini-media-player'
-        style:
-          background: 'right / cover no-repeat url("#/local/assets/")'
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: 'hidden#'
-        type: 'custom:card-modder'
-      - card:
-          entity: switch.smart_life_relay
-          image: /local/assets/kettle_2.png
-          show_name: true
-          show_state: true
-          state_image:
-            unavailable: /local/assets/offline.png
-          tap_action:
-            action: toggle
-          type: picture-entity
-        style:
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: hidden
         type: 'custom:card-modder'
       - card:
           entities:
             - entity: switch.smart_life_relay
-              icon: 'mdi:kettle'
-              name: Kettle
+            - type: divider
             - entity: sensor.kitchen_home_timer
+              name: Kitchen Timer
           show_header_toggle: false
+          title: Kitchen
           type: entities
         style:
+          background: 'right / cover no-repeat url("#/local/assets/")'
           border: 'solid 1px rgba(100,100,100,0.3)'
           border-radius: 10px
           box-shadow: '3px 3px rgba(0,0,0,0.4)'
           overflow: hidden
         type: 'custom:card-modder'
-    icon: 'mdi:silverware-fork-knife'
-    title: KITCHEN
+      - card:
+          align_state: center
+          animate: true
+          decimals: 1
+          entities:
+            - entity: sensor.hallway_sensor_temperature
+              name: Temperature
+            - entity: sensor.hallway_sensor_light_level
+              name: Light level
+          name: Hallway sensors
+          show:
+            extrema: false
+            labels: true
+            fill: fade
+          type: 'custom:mini-graph-card'
+        style:
+          background: 'right / cover no-repeat url("#/local/assets/")'
+          border: 'solid 1px rgba(100,100,100,0.3)'
+          border-radius: 10px
+          box-shadow: '3px 3px rgba(0,0,0,0.4)'
+          overflow: hidden
+        type: 'custom:card-modder'
+    badges: []
+    icon: 'mdi:glassdoor'
+    path: ''
+    theme: Backend-selected
+    title: 'Hallway, Kitchen, Bathroom'
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - card:
           artwork: cover
           entity: media_player.living_room_tv
@@ -912,6 +870,8 @@ views:
               height: 150
               line_color: red
               line_width: 10
+              show:
+                fill: fade
               name: Temp.
               type: 'custom:mini-graph-card'
             style:
@@ -933,6 +893,7 @@ views:
               name: Humidity
               show:
                 labels: false
+                fill: fade
               type: 'custom:mini-graph-card'
             style:
               background: 'right / cover no-repeat url("#/local/assets/")'
@@ -1167,6 +1128,7 @@ views:
           show:
             extrema: false
             labels: true
+            fill: fade
           type: 'custom:mini-graph-card'
         style:
           background: 'right / cover no-repeat url("#/local/assets/")'
@@ -1191,6 +1153,8 @@ views:
     title: Living room
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - card:
           artwork: cover
           entity: media_player.bedroom_speakers
@@ -1230,6 +1194,7 @@ views:
               name: Temp.
               show:
                 labels: false
+                fill: fade
               type: 'custom:mini-graph-card'
             style:
               background: 'right / cover no-repeat url("#/local/assets/")'
@@ -1250,6 +1215,7 @@ views:
               name: Humidity
               show:
                 labels: false
+                fill: fade
               type: 'custom:mini-graph-card'
             style:
               background: 'right / cover no-repeat url("#/local/assets/")'
@@ -1410,6 +1376,8 @@ views:
     title: Master Bedroom
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - card:
           artwork: cover
           entity: media_player.googlehome9988
@@ -1550,6 +1518,8 @@ views:
     title: BEDROOM 2
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - artwork: cover
         entity: media_player.living_room_tv
         hide:
@@ -1617,6 +1587,8 @@ views:
     title: Multiroom
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - entities:
           - entity: media_player.home_group
             group: true
@@ -1711,6 +1683,8 @@ views:
     title: Multiroom
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - cards:
           - entity: device_tracker.viviens_iphone
             show_name: false
@@ -1817,6 +1791,7 @@ views:
         show:
           extrema: true
           labels: false
+          fill: fade
         type: 'custom:mini-graph-card'
       - entities:
           - entity: sensor.seventeentrack_packages_not_found
@@ -1839,6 +1814,8 @@ views:
     title: Connections
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - entities:
           - entity: automation.hue_lights_on_at_sunset
           - entity: automation.hue_lights_off_at_sunrise
@@ -1893,6 +1870,8 @@ views:
     title: Automations
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - cards:
           - cards:
               - entity: group.living_room_lights
@@ -2117,10 +2096,28 @@ views:
                 type: 'custom:button-card'
             type: vertical-stack
         type: horizontal-stack
+      - card:
+          entity: switch.smart_life_relay
+          image: /local/assets/kettle_2.png
+          show_name: true
+          show_state: true
+          state_image:
+            unavailable: /local/assets/offline.png
+          tap_action:
+            action: toggle
+          type: picture-entity
+        style:
+          border: 'solid 1px rgba(100,100,100,0.3)'
+          border-radius: 10px
+          box-shadow: '3px 3px rgba(0,0,0,0.4)'
+          overflow: hidden
+        type: 'custom:card-modder'
     icon: 'mdi:delete-circle-outline'
     title: Bin
   - badges: []
     cards:
+      - type: 'custom:compact-custom-header'
+        main_config: true
       - entities:
           - entity: light.hue_one
             icon: 'mdi:lamp'
@@ -2166,17 +2163,6 @@ views:
           - type: 'custom:fold-entity-row'
             head: sensor.yr_symbol
             items:
-              - sensor.outside_humidity
-              - sensor.outside_temperature
-          - light.bed_light
-          - type: 'custom:fold-entity-row'
-            head:
-              type: section
-              label: Single Lights
-            group_config: null
-            items:
-              - light.tv_lightstrip
-              - light.hue_left
-              - light.hue_right
+              - sensor.sonoff_th16_humidity
     icon: ''
     title: TEST
