--- a/lovelace-ui.yaml
+++ b/lovelace-ui.yaml
@@ -496,9 +496,9 @@ views:
       - clock_am_pm: false
         clock_format: '24'
         main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - card:
           artwork: cover
           entity: media_player.googlehome4940
@@ -613,9 +613,9 @@ views:
   - badges: []
     cards:
       - main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - card:
           artwork: cover
           entity: media_player.living_room_tv
@@ -648,43 +648,36 @@ views:
           box-shadow: '3px 3px rgba(0,0,0,0.4)'
           overflow: hidden
         type: 'custom:card-modder'
-      - cards:
-          - card:
-              entities:
-                - entity: light.hue_one
+      - card:
+          entities:
+            - entity: light.hue_one
+              type: 'custom:slider-entity-row'
+            - type: divider
+            - entity: light.entertainment_area
+              type: 'custom:slider-entity-row'
+            - entity: light.wall_lightstrip
+              type: 'custom:slider-entity-row'
+            - head:
+                label: MORE
+                type: section
+              items:
+                - entity: light.tv_lightstrip
                   type: 'custom:slider-entity-row'
                 - type: divider
-                - entity: light.entertainment_area
-                  type: 'custom:slider-entity-row'
-                - entity: light.wall_lightstrip
-                  type: 'custom:slider-entity-row'
-              title: Hue Lights
-              type: entities
-            style:
-              background: 'right / cover no-repeat url("#/local/assets/")'
-              border: 'solid 1px rgba(100,100,100,0.3)'
-              border-radius: 10px
-              box-shadow: '3px 3px rgba(0,0,0,0.4)'
-              overflow: 'hidden#'
-            type: 'custom:card-modder'
-          - card:
-              entities:
                 - entity: light.hue_left
                   type: 'custom:slider-entity-row'
                 - entity: light.hue_right
                   type: 'custom:slider-entity-row'
-                - type: divider
-                - entity: light.tv_lightstrip
-                  type: 'custom:slider-entity-row'
-              type: entities
-            style:
-              background: 'right / cover no-repeat url("#/local/assets/")'
-              border: 'solid 1px rgba(100,100,100,0.3)'
-              border-radius: 10px
-              box-shadow: '3px 3px rgba(0,0,0,0.4)'
-              overflow: 'hidden#'
-            type: 'custom:card-modder'
-        type: 'custom:swipe-card'
+              type: 'custom:fold-entity-row'
+          title: Hue Lights
+          type: entities
+        style:
+          background: 'right / cover no-repeat url("#/local/assets/")'
+          border: 'solid 1px rgba(100,100,100,0.3)'
+          border-radius: 10px
+          box-shadow: '3px 3px rgba(0,0,0,0.4)'
+          overflow: 'hidden#'
+        type: 'custom:card-modder'
       - cards:
           - cards:
               - card:
@@ -1138,9 +1131,9 @@ views:
   - badges: []
     cards:
       - main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - card:
           artwork: cover
           entity: media_player.bedroom_speakers
@@ -1378,9 +1371,9 @@ views:
   - badges: []
     cards:
       - main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - card:
           artwork: cover
           entity: media_player.googlehome9988
@@ -1522,9 +1515,9 @@ views:
   - badges: []
     cards:
       - main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - artwork: cover
         entity: media_player.living_room_tv
         hide:
@@ -1593,9 +1586,9 @@ views:
   - badges: []
     cards:
       - main_config: true
-        notifications: hide
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - entities:
           - entity: media_player.home_group
             group: true
@@ -1692,6 +1685,8 @@ views:
     cards:
       - main_config: true
         type: 'custom:compact-custom-header'
+        notifications: overflow
+        voice: overflow
       - cards:
           - entity: device_tracker.viviens_iphone
             show_name: false
@@ -1792,7 +1787,6 @@ views:
       - align_state: center
         animate: false
         decimals: 2
-        lower_bound: 0
         entities:
           - color: limegreen
             entity: sensor.speedtest_download
@@ -1804,6 +1798,7 @@ views:
             entity: sensor.speedtest_ping
             name: Ping
         hour24: true
+        lower_bound: 0
         name: Speedtest.net
         show:
           extrema: true
@@ -1817,7 +1812,8 @@ views:
     cards:
       - main_config: true
         type: 'custom:compact-custom-header'
-        voice: hide
+        notifications: overflow
+        voice: overflow
       - entities:
           - entity: automation.hue_lights_on_at_sunset
           - entity: automation.hue_lights_off_at_sunrise
@@ -1874,6 +1870,8 @@ views:
     cards:
       - main_config: true
         type: 'custom:compact-custom-header'
+        notifications: overflow
+        voice: overflow
       - cards:
           - cards:
               - entity: group.living_room_lights
@@ -2062,36 +2060,6 @@ views:
           box-shadow: '3px 3px rgba(0,0,0,0.4)'
           overflow: hidden
         type: 'custom:card-modder'
-      - card:
-          entities:
-            - entity: light.hue_one
-              type: 'custom:slider-entity-row'
-            - type: divider
-            - entity: light.entertainment_area
-              type: 'custom:slider-entity-row'
-            - entity: light.wall_lightstrip
-              type: 'custom:slider-entity-row'
-            - head:
-                label: MORE
-                type: section
-              items:
-                - entity: light.tv_lightstrip
-                  type: 'custom:slider-entity-row'
-                - type: divider
-                - entity: light.hue_left
-                  type: 'custom:slider-entity-row'
-                - entity: light.hue_right
-                  type: 'custom:slider-entity-row'
-              type: 'custom:fold-entity-row'
-          title: Hue Lights
-          type: entities
-        style:
-          background: 'right / cover no-repeat url("#/local/assets/")'
-          border: 'solid 1px rgba(100,100,100,0.3)'
-          border-radius: 10px
-          box-shadow: '3px 3px rgba(0,0,0,0.4)'
-          overflow: 'hidden#'
-        type: 'custom:card-modder'
       - cards:
           - cards:
               - card:
@@ -2182,6 +2150,8 @@ views:
     cards:
       - main_config: true
         type: 'custom:compact-custom-header'
+        notifications: overflow
+        voice: overflow
       - entities:
           - entity: light.hue_one
             icon: 'mdi:lamp'
@@ -2228,44 +2198,5 @@ views:
             type: 'custom:fold-entity-row'
         title: Folding entities
         type: entities
-      - cards:
-          - align_state: center
-            animate: false
-            card: null
-            decimals: 3
-            entities:
-              - sensor.eur_gbp
-              - sensor.gbp_eur
-            hour24: true
-            hours_to_show: 24
-            show:
-              extrema: false
-              fill: fade
-              graph: bar
-              labels: false
-            type: 'custom:mini-graph-card'
-          - align_state: center
-            animate: false
-            card: null
-            decimals: 2
-            entities:
-              - sensor.bitcoin
-            show:
-              extrema: false
-              fill: fade
-              labels: true
-            type: 'custom:mini-graph-card'
-          - align_state: center
-            animate: false
-            card: null
-            decimals: 2
-            entities:
-              - sensor.google
-            show:
-              extrema: false
-              fill: fade
-              labels: false
-            type: 'custom:mini-graph-card'
-        type: 'custom:swipe-card'
     icon: ''
     title: TEST
