Vertical Stack In Card added, a ton of UI streamlining
some new assets, mini-graph-card updated

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -227,9 +227,10 @@ sensor:
 
 
 binary_sensor:
+
 #  - platform: rpi_gpio
 #    ports:
-#      17: PIR Test
+#      17: Living Room Motion Sensor
 
   - platform: workday
     country: UK
